--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,13 @@ android {
         targetSdk 32
         versionCode 2
         versionName "2.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        externalNativeBuild {
+            cmake {
+                cppFlags ""
+            }
+        }
     }
     buildFeatures{
         viewBinding true
@@ -53,6 +58,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+            version "3.18.1"
         }
     }
     compileOptions {
