--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,12 @@ android {
             keyPassword "android"
             keyAlias "platform"
         }
+        platform {
+            storeFile file('../security/platform/platform.jks')
+            storePassword "android"
+            keyPassword "android"
+            keyAlias "platform"
+        }
         debugkeystore {
             storeFile file(homePath+'/.android/debug.keystore')
             storePassword 'android'
@@ -24,13 +30,13 @@ android {
     }
     buildTypes {
         release {
-            signingConfig signingConfigs.bundle
+            signingConfig signingConfigs.platform
             debuggable false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-            signingConfig signingConfigs.debugkeystore
+            signingConfig signingConfigs.platform
             debuggable true
         }
     }
@@ -88,6 +94,16 @@ dependencies {
     implementation "androidx.security:security-identity-credential:1.0.0-alpha03"
     implementation "androidx.security:security-app-authenticator:1.0.0-alpha02"
 
+    implementation group:  'com.google.code.gson', name: 'gson',  version: '2.8.5'
+    implementation 'com.google.android.gms:play-services-ads-lite:21.3.0'
+    //implementation 'com.google.android.gms:play-services-ads-base:21.3.0'
+    //implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
+    //implementation 'androidx.ads:ads-identifier:1.0.0-alpha04'
+    ///mplementation 'androidx.ads:ads-identifier-common:1.0.0-alpha04'
+    //implementation 'androidx.ads:ads-identifier-provider:1.0.0-alpha04'
+
+    implementation 'com.google.guava:guava:28.0-android'
+    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'com.malinskiy.adam:adam:0.4.7'
